--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+*{
+    font-family: "Orbitron", sans-serif;
+    font-optical-sizing: auto;
+}
+body{
+    background-color: black;
+}
