--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 @tailwind utilities;
 
 *{
-    font-family: "Orbitron", sans-serif;
+    /* font-family: "Orbitron", sans-serif; */
     font-optical-sizing: auto;
 }
 body{
@@ -26,6 +26,60 @@ body{
   .glow-btn:hover{
     box-shadow: 0px 0px 5px cyan,0px 0px 25px cyan,0px 0px 50px cyan,0px 0px 100px cyan; 
   }
+
+  .hero {
+    position: relative;
+    background: url('./assets/hero2.jpeg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+  }
   
+  .hero::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.8); /* Adjust the opacity here */
+    z-index: 1;
+  }
   
-  /*animation effect*/
+  .hero-content {
+    position: relative;
+    z-index: 2; /* Make sure content is above the background overlay */
+  }
+  .tex{
+    font-size: 4rem;
+    text-align: center;
+    /* height:90vh; */
+    /* line-height: 90vh; */
+    color: #fcedd8;
+    /* background: #d52e3f; */
+     font-family: 'Niconne', cursive;
+    font-weight: 700;
+    text-shadow: 5px 5px 0px black,   /* Light Aqua */
+                  10px 10px 0px #00d1d1, /* Aqua */
+                  15px 15px 0px #00b3b3, /* Deeper Aqua */
+                  20px 20px 0px #009696, /* Teal */
+                  25px 25px 0px #006f6f, /* Dark Teal */
+                  0px 0px 0px #00ffff,   /* Light Aqua */
+                  0px 0px 0px #00d1d1,   /* Aqua */
+                  0px 0px 0px #00b3b3,   /* Deeper Aqua */
+                  0px 0px 0px #009696;   /* Teal */
+}
+
+p{
+  text-align: center;
+  font-family: "Helvetica";
+  font-size:0.8rem;
+}
+
+a{
+  color: #d52e3f;
+  text-decoration: none;
+  font-family: 'Niconne', cursive;
+  font-size: 1.2rem;
+
+}
