--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+*{
+    /* font-family: "Orbitron", sans-serif; */
+    font-optical-sizing: auto;
+    /* border: 1px solid green; */
+}
