--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -7,7 +7,7 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    /* height: 100vh; */
 }
 
 .container {
