--- a/src/css/do.css
+++ b/src/css/do.css
@@ -5,7 +5,7 @@
 .do {
     font-family: 'Poppins', sans-serif;
     background-color:black;
-    color:white;
+    color:grey;
     line-height: 1.6;
     overflow-y: scroll; /* Enable vertical scrolling */
     display: flex;
@@ -51,7 +51,7 @@ header h3 {
 
 .description {
     font-size: 13px;
-    color: white;;
+    color: grey;;
     max-width: 70%;
     margin: 0 auto;
     line-height: 1.8;
@@ -122,7 +122,7 @@ header h3 {
     display: none; /* Hidden by default */
     padding: 16px;
     background-color: #5f5fe5;
-    color: white;
+    color: grey;
     text-decoration: none;
     border-radius: 50%; /* Circular shape */
     position: absolute;
@@ -135,7 +135,7 @@ header h3 {
     line-height: 70px; /* Center text vertically */
     transform: rotate(30deg); /* Rotated by 30 degrees */
     z-index: 1; /* Ensure it stays above other elements */
-    white-space: nowrap; /* Prevent text from wrapping */
+    grey-space: nowrap; /* Prevent text from wrapping */
 }
 
 .btn:hover {
@@ -152,8 +152,8 @@ header h3 {
 
 .package-card p {
     font-size: 14px;
-    color:white;
-    margin: 5px 0;
+    color:grey;
+    /* margin: 5px 0; */
 }
 
 .package-card ul {
@@ -166,14 +166,15 @@ header h3 {
 
 .package-card ul li {
     font-size: 14px;
-    color:white;
+    color:grey;
     margin: 5px 0;
 }
 
 /* Right Side Image */
 .side-image {
     width: 44%;
-    height: 500px; /* Allow height to adjust */
+    height: 100%;
+    /* height: 500px; Allow height to adjust */
 }
 
 .side-image img {
